# BoiseState-CS-Projects

./: README.md
cs117/: README.md
cs117/p1/: README.md  face.cpp  maxdeflection.cpp
cs117/p10/: Entropy_Report.txt  Generate_Entropy_Report  README.md  entropy.cpp  entropy.h  main.cpp
cs117/p2/: README.md  besthand  besthand.cpp
cs117/p3/: README.md  barcode_converter.cpp
cs117/p4/: README.md  TakeQuiz  UML.txt  quiz.h  quizproctor.h  student.h  testdriver.cpp
cs117/p5/: AnimatedGraph  README.md  graph.cpp  graph.h  line.cpp  line.h  main.cpp
cs117/p6/: BestHand_v2  README.md  card.cpp  card.h  main.cpp  player.cpp  player.h
cs117/p7/: Decrypter_2.0  README.md  can_u_decipher_em_127-c.txt  key.txt  main.cpp
cs117/p8/griffin/starter/: CMakeCache.txt  CMakeLists.txt  Makefile  clean  cmake_install.cmake  setup
cs117/p8/griffin/starter/cmake/: Findlog4c.cmake  Findsdl2.cmake
cs117/p8/griffin/starter/src/: CMakeLists.txt  Makefile  cmake_install.cmake
cs117/p8/griffin/starter/src/common/: common.hpp
cs117/p8/griffin/starter/src/hidapi/: CMakeLists.txt  Makefile  cmake_install.cmake  hid.cpp  hidapi.h
cs117/p8/griffin/starter/src/projects/: CMakeLists.txt  Makefile  cmake_install.cmake
cs117/p8/griffin/starter/src/projects/tester/: CMakeLists.txt  Finch.cpp  Finch.h  Makefile  cmake_install.cmake  tester  tester.cpp  tester.cpp~
cs117/p9/: README.md  Race  main.cpp  motorcycle.cpp  motorcycle.h  truck.cpp  truck.h  vehicle.cpp  (+3 more)
cs121/: README.md
cs221/: README.md
cs253/: README.md
cs321/: README.md
cs354/: README.md
cs361/: README.md
(+202 files in other folders)
